@@ -22,20 +22,12 @@
 #include <stdarg.h>
 
 #include <sys/syscall.h>
-#include <kernel-features.h>
-
-
-#ifdef __ASSUME_F_GETOWN_EX
-# define miss_F_GETOWN_EX 0
-#else
-static int miss_F_GETOWN_EX;
-#endif
 
 
 static int
 do_fcntl (int fd, int cmd, void *arg)
 {
-  if (cmd != F_GETOWN || miss_F_GETOWN_EX)
+  if (cmd != F_GETOWN)
     return INLINE_SYSCALL (fcntl, 3, fd, cmd, arg);
 
   INTERNAL_SYSCALL_DECL (err);
@@ -43,15 +35,6 @@ do_fcntl (int fd, int cmd, void *arg)
   int res = INTERNAL_SYSCALL (fcntl, err, 3, fd, F_GETOWN_EX, &fex);
   if (!INTERNAL_SYSCALL_ERROR_P (res, err))
     return fex.type == F_OWNER_GID ? -fex.pid : fex.pid;
-
-#ifndef __ASSUME_F_GETOWN_EX
-  if (INTERNAL_SYSCALL_ERRNO (res, err) == EINVAL)
-    {
-      res = INLINE_SYSCALL (fcntl, 3, fd, F_GETOWN, arg);
-      miss_F_GETOWN_EX = 1;
-      return res;
-    }
-#endif
 
   __set_errno (INTERNAL_SYSCALL_ERRNO (res, err));
   return -1;
