@@ -1,5 +1,13 @@
 2014-06-20  Joseph Myers  <joseph@codesourcery.com>
 
+	* sysdeps/unix/sysv/linux/kernel-features.h
+	(__ASSUME_F_GETOWN_EX): Remove macro.
+	* sysdeps/unix/sysv/linux/fcntl.c: Do not include
+	<kernel-features.h>.
+	(miss_F_GETOWN_EX): Remove variable or macro.
+	(do_fcntl): Do not check miss_F_GETOWN_EX.
+	(do_fcntl) [!__ASSUME_F_GETOWN_EX]: Remove conditional code.
+
 	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_AT_RANDOM):
 	Remove macro.
 	* sysdeps/unix/sysv/linux/dl-osinfo.h (_dl_setup_stack_chk_guard)
